objects/Job__c.object
<CustomObject>
    <customHelp>Job_Help_Text_test</customHelp>
    <description>Contains all ENS assignments (training, consulting and retainers) and Proposals</description>
    <fields>
        <fullName>AUD_Materials_Total__c</fullName>
        <formula>IF ( Billing_X_Rate__c=0,0,FX_Materials_Total__c  /  Billing_X_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Materials AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AUD_Prof_Serv_Total__c</fullName>
        <formula>IF (Billing_X_Rate__c=0,0,FX_Prof_Serv_Total__c /  Billing_X_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Prof Serv AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Client_Status__c</fullName>
        <formula>case(Account__r.Client_Statusold__c,
&quot;Active Under Parent Account&quot;, &quot;Active Under Parent Account&quot;,
&quot;Associate&quot;, &quot;Associate&quot;,
&quot;Client&quot;, &quot;Client&quot;,
&quot;Competitor&quot;, &quot;Competitor&quot;,
&quot;Ex ENS Licencee&quot;, &quot;Ex ENS Licencee&quot;,
&quot;Ex ENS Marketer&quot;, &quot;Ex ENS Marketer&quot;,
&quot;Free&quot;, &quot;Free&quot;,
&quot;GROUP&quot;, &quot;GROUP&quot;,
&quot;Inactive&quot;, &quot;Inactive&quot;,
&quot;Lead&quot;, &quot;Lead&quot;,
&quot;Licencee&quot;, &quot;Licencee&quot;,
&quot;Marketer&quot;, &quot;Marketer&quot;,
&quot;Negotium&quot;, &quot;Negotium&quot;, 
&quot;Prospect&quot;, &quot;Prospect&quot;,
&quot;Prospective ENS Consultant&quot;, &quot;Prospective ENS Consultant&quot;,
&quot;Public Program&quot;, &quot;Public Program&quot;,
&quot;Supplier&quot;, &quot;Supplier&quot;,
&quot;Suspect&quot;, &quot;Suspect&quot;,
&quot;Target&quot;, &quot;Target&quot;,
&quot;ENS 4 Frens&quot;, &quot;ENS 4 Frens&quot;,
&quot;ERROR&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>client status from the account</inlineHelpText>
        <label>Account Client Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Comments__c</fullName>
        <formula>Account__r.Comments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Comments about the account that is the customer for this job.</inlineHelpText>
        <label>Account Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Description__c</fullName>
        <formula>Account__r.Description_Summary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The description notes about the account that is the customer for this job.</inlineHelpText>
        <label>Account Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_GROUP__c</fullName>
        <formula>Account__r.Account_GROUP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account GROUP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone_Number__c</fullName>
        <formula>Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sell_1_Name__c</fullName>
        <formula>Account__r.Sell_1__r.FirstName &amp; &quot; &quot; &amp; Account__r.Sell_1__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sell 1 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sell_2_Name__c</fullName>
        <formula>Account__r.Sell_2__r.FirstName &amp; &quot; &quot; &amp;  Account__r.Sell_2__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sell 2 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sell__c</fullName>
        <formula>Account__r.Sell_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sell</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accreditation_Date__c</fullName>
        <inlineHelpText>This is for ENS Trainers only.
Enter the date of Accreditation to appear on the certificate</inlineHelpText>
        <label>CDP Accreditation Date</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_end_date__c</fullName>
        <inlineHelpText>The actual end date defined at the Opportunity based on the time records created.</inlineHelpText>
        <label>(deprecated) Actual end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_no_of_participants_roll_up__c</fullName>
        <inlineHelpText>Admin only</inlineHelpText>
        <label>Actual no. of participants roll-up</label>
        <summaryForeignKey>Participant__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_number_of_days__c</fullName>
        <inlineHelpText>Please enter the actual number of days for this Opportunity i.e. is this a 2 days course? A 4 day course?</inlineHelpText>
        <label>Actual number of days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_start_date__c</fullName>
        <inlineHelpText>The actual start date defined at the Opportunity based on the time records created.</inlineHelpText>
        <label>(deprecated) Actual start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <inlineHelpText>Additional comments</inlineHelpText>
        <label>Additional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_PAX_cutoff_date__c</fullName>
        <inlineHelpText>When is the last date we will accept additional PAX requests from NAM?</inlineHelpText>
        <label>Additional PAX cutoff date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admin_Contact_Details__c</fullName>
        <description>Migrated</description>
        <label>Admin Contact Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Contact_Name__c</fullName>
        <description>Migrated</description>
        <label>Admin Contact Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For all jobs migrated from FMPro this field will be blank - refer to the &apos;Migration&apos; section to see ADMIN name as a text field.
For all future jobs this will be a look up field to CONTACTS.</inlineHelpText>
        <label>Admin Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Jobs as Admin Contact</relationshipLabel>
        <relationshipName>Jobs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advanced_program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advanced program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advanced_program_book_type__c</fullName>
        <label>Advanced program book type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green Negotiation and Influencing Manual</fullName>
                </value>
                <value>
                    <fullName>Blue Negotiation and Influencing Workbook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_job_comments__c</fullName>
        <label>All job comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Aust_Int__c</fullName>
        <inlineHelpText>Enter Australia or International</inlineHelpText>
        <label>Aust\Int</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Balance_Invoice_Number__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Record ENS Invoice number</inlineHelpText>
        <label>Balance Invoice Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance_Invoice_Sent__c</fullName>
        <inlineHelpText>Enter date balance invoice was sent</inlineHelpText>
        <label>Balance Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter currency type</inlineHelpText>
        <label>Billing Currency</label>
        <referenceTo>Currencies__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_X_Rate__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Note this field cannot be set to Required as it makes the data load fail. Set it as required in the page layouts if necessary. GE 23/10/08.</description>
        <inlineHelpText>Foreign currency per A$.
Eg. A$1 = US$0.80</inlineHelpText>
        <label>Billing X Rate</label>
        <precision>14</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Breifing_on_Negotiation__c</fullName>
        <label>Briefing on Negotiation</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSM_Email__c</fullName>
        <formula>CSM_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM_Name_Lookup__c</fullName>
        <formula>CSM_Name__r.FirstName &amp; &quot; &quot; &amp;  CSM_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSM Name Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSM Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CSM Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Studies__c</fullName>
        <inlineHelpText>Enter the names of the case studies used on the program</inlineHelpText>
        <label>Case Studies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Date_Text__c</fullName>
        <inlineHelpText>Format should be 8-10 May 2012 or 8-9 &amp; 20-21 May 2012
This text appears on the certificate and briefing sheet</inlineHelpText>
        <label>Certificate Date Text</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Title__c</fullName>
        <label>Certificate Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Negotiation Fundamentals</fullName>
                </value>
                <value>
                    <fullName>Foundations of Negotiation &amp; Influencing</fullName>
                </value>
                <value>
                    <fullName>Effective Negotiation &amp; Influencing</fullName>
                </value>
                <value>
                    <fullName>Professional Negotiation &amp; Influencing</fullName>
                </value>
                <value>
                    <fullName>Strategic Negotiation &amp; Influencing</fullName>
                </value>
                <value>
                    <fullName>Advanced Negotiation &amp; Influencing</fullName>
                </value>
                <value>
                    <fullName>Expert Negotiation &amp; Influencing</fullName>
                </value>
                <value>
                    <fullName>ENSI Accredited Practitioner</fullName>
                </value>
                <value>
                    <fullName>ENSI Accredited Negotiation Trainer</fullName>
                </value>
                <value>
                    <fullName>ENSI Accredited Negotiation Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificate_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For Advanced Certificates select &quot;Shrink to printable area&quot; under page scaling.
2 day - Effective
3 day - Professional
4 day - Strategic</inlineHelpText>
        <label>Certificate Type</label>
        <referenceTo>Certificate_Type__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certificate_template__c</fullName>
        <formula>IF(
OR(
CONTAINS(Opportunity_and_Job_sub_type__c,&quot;CDP-&quot;),
CONTAINS(Opportunity_and_Job_sub_type__c,&quot;WLD Training&quot;)
),
&quot;a1G1r000002tnVp&quot;,
&quot;a1G1r000002tnVu&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certificate template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Address__c</fullName>
        <description>Migrated</description>
        <label>Client Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <inlineHelpText>Identify the reason this Opportunity has been Closed</inlineHelpText>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Proposal Declined</fullName>
                </value>
                <value>
                    <fullName>Proposal Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Price too high</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>NAM Left</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Comments about this specific job.</inlineHelpText>
        <label>Job Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <inlineHelpText>Enter the date you marked the job as completed</inlineHelpText>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confimed_Date_as_Month__c</fullName>
        <description>Sorted into financial year months</description>
        <formula>CASE( Confirmed_Date_as_Number__c ,
01, &quot;g January&quot;,
02,&quot;h February&quot;,
03,&quot;i March&quot;,
04,&quot;j April&quot;,
05,&quot;k May&quot;,
06,&quot;l June&quot;,
07,&quot;a July&quot;,
08,&quot;b August&quot;,
09,&quot;c September&quot;,
10,&quot;d October&quot;,
11,&quot;e November&quot;,
12,&quot;f December&quot;,
&quot;z error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confimed Date as Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Date_YearMth_as_Number__c</fullName>
        <formula>TEXT(YEAR( Confirmed_Date__c ) ) 
&amp; IF (MONTH(Confirmed_Date__c ) &lt;10,&quot;0&quot;,&quot;&quot;) 
&amp; TEXT(MONTH(Confirmed_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmed Date YearMth as Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Date__c</fullName>
        <inlineHelpText>Date client agreed to go ahead with  job</inlineHelpText>
        <label>Confirmed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_Date_as_Number__c</fullName>
        <formula>MONTH( Confirmed_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmed Date as Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_actions_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Admin only</inlineHelpText>
        <label>Created actions complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Daily_Professional_Fee_AUD__c</fullName>
        <formula>AUD_Prof_Serv_Total__c / Total_Job_Item_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Professional Fee AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Professional_Fee_FX__c</fullName>
        <formula>FX_Prof_Serv_Total__c  / Total_Job_Item_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Professional Fee FX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_3_month_case_study_sent__c</fullName>
        <inlineHelpText>Date when 3 month case study was sent - for CSM reference</inlineHelpText>
        <label>Date 3 month case study sent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_3mth_case_study_sent__c</fullName>
        <inlineHelpText>Date when 3 month case study was sent - for CS reference</inlineHelpText>
        <label>Date 3 month case study sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_6_week_case_study_sent__c</fullName>
        <inlineHelpText>Date when 3 month case study was sent - for CSM reference</inlineHelpText>
        <label>Date 6 week case study sent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_6wk_case_study_sent__c</fullName>
        <inlineHelpText>Date when 3 month case study was sent - for CS reference</inlineHelpText>
        <label>Date 6 week case study sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Created_CAL_YR__c</fullName>
        <formula>YEAR ((DATEVALUE( CreatedDate )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Created CAL YR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Materials_sent__c</fullName>
        <inlineHelpText>Select the date materials were sent</inlineHelpText>
        <label>Date Materials to be sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_WP_Sent__c</fullName>
        <inlineHelpText>Select the date you sent the welcome pack - for CS reference</inlineHelpText>
        <label>Date Welcome Pack Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Welcome_Pack_Sent__c</fullName>
        <inlineHelpText>Type in the date you sent the welcome pack - for CSM reference</inlineHelpText>
        <label>Date Welcome Pack Sent</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_eLearn_Reminder_Sent__c</fullName>
        <inlineHelpText>Date eLearning reminder sent to pax</inlineHelpText>
        <label>Date eLearning Reminder Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_eLearning_Reminder_Sent__c</fullName>
        <description>Date eLearning reminder sent to pax</description>
        <inlineHelpText>Date eLearning reminder sent to pax</inlineHelpText>
        <label>Date eLearning Reminder Sent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_eLearning_email_sent__c</fullName>
        <inlineHelpText>enter the date you sent the eLearning email - for CSM reference</inlineHelpText>
        <label>Date eLearning email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_materials_ETA__c</fullName>
        <inlineHelpText>When are the materials scheduled to arrive?</inlineHelpText>
        <label>Date materials ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_recognised__c</fullName>
        <label>Days recognised</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_remaining__c</fullName>
        <label>Days remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_sold__c</fullName>
        <label>Days sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_worked__c</fullName>
        <label>Days worked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delete_test__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Admin only</inlineHelpText>
        <label>Delete test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Address__c</fullName>
        <inlineHelpText>Where the materials are being sent</inlineHelpText>
        <label>Delivery Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Comments__c</fullName>
        <inlineHelpText>Include additional comments, EORI number for germany, Cliftons booking numbers, Company tax number for Chile</inlineHelpText>
        <label>Delivery Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Company_Name__c</fullName>
        <label>Delivery Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Contact_Person__c</fullName>
        <label>Delivery Contact Person</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Phone_Number__c</fullName>
        <label>Delivery Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_booking_reference__c</fullName>
        <label>Delivery, booking reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_boxes_dimensions__c</fullName>
        <label>Delivery, boxes / dimensions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DHL Jumbo Jnr (41x34x25)</fullName>
                </value>
                <value>
                    <fullName>Small TNT (23x32x31)</fullName>
                </value>
                <value>
                    <fullName>Big TNT (30x31x35)</fullName>
                </value>
                <value>
                    <fullName>DHL Express 7 (37x24x31)</fullName>
                </value>
                <value>
                    <fullName>DHL Express 9 (47x31x38)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Brown box (30x35x45)</fullName>
                    <isActive>false</isActive>
                    <label>Brown box (30x35x45)</label>
                </value>
                <value>
                    <fullName>DHL Box 9 (47x31x38)</fullName>
                    <isActive>false</isActive>
                    <label>DHL Box 9 (47x31x38)</label>
                </value>
                <value>
                    <fullName>DHL Jumbo (49x44x36)</fullName>
                    <isActive>false</isActive>
                    <label>DHL Jumbo (49x44x36)</label>
                </value>
                <value>
                    <fullName>DHL box 7 (37x24x31)</fullName>
                    <isActive>false</isActive>
                    <label>DHL box 7 (37x24x31)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_deliver_to__c</fullName>
        <label>Delivery, deliver to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Venue</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_duties_and_taxes__c</fullName>
        <label>Delivery, duties and taxes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ENSi</fullName>
                    <default>true</default>
                    <label>ENSi</label>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_estimated_freight_charge__c</fullName>
        <label>Delivery, estimated freight charge</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delivery_total_weight__c</fullName>
        <label>Delivery, total weight</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_type_of_service__c</fullName>
        <label>Delivery, type of service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TNT Overnight Express</fullName>
                </value>
                <value>
                    <fullName>DHL International</fullName>
                </value>
                <value>
                    <fullName>TNT Same day</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_value_per_set__c</fullName>
        <label>Delivery, value per set (intl. only)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Invoice_Sent__c</fullName>
        <inlineHelpText>Enter date for 50% deposit invoice sent</inlineHelpText>
        <label>Deposit Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Difference_to_Allocation_FX__c</fullName>
        <formula>Recon_Total_JobValue_FX__c  - FX_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field will be updated and needs to equal 0
If a positive number you have NOT allocated enough in job items
If a negative number you have allocated TOO much</inlineHelpText>
        <label>Difference to Allocation FX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DropBox_URL__c</fullName>
        <inlineHelpText>Enter the URL for the DropBox share folder you have created for reinforcement email photos and files.</inlineHelpText>
        <label>DropBox URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ENSCampaign_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this Opportunity arose from an ENSCampaign, please specify here.</inlineHelpText>
        <label>ENSCampaign Number</label>
        <referenceTo>ENSCampaign__c</referenceTo>
        <relationshipLabel>Jobs and Opportunities</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Edits_Required__c</fullName>
        <label>Edits Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Comments__c</fullName>
        <inlineHelpText>Comments for email when sending the briefing sheet</inlineHelpText>
        <label>Email Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_no_of_days__c</fullName>
        <inlineHelpText>Defined at Opportunity</inlineHelpText>
        <label>Estimated no. of days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_no_of_participants__c</fullName>
        <inlineHelpText>Defined at Opportunity</inlineHelpText>
        <label>Estimated no. of participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evals_P1_Average__c</fullName>
        <formula>(Evals_P1_Clarity_avg__c + Evals_P1_Language_avg__c + Evals_P1_Negotiating_Expertise_avg__c + Evals_P1_Overall_avg__c + Evals_P1_Responsiveness_avg__c)/5</formula>
        <label>Evals - P1 - Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evals_P1_Clarity_avg__c</fullName>
        <formula>Evals_P1_Clarity_sum__c / Evals_P1_Clarity_count__c / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evals - P1 - Clarity avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evals_P1_Clarity_count__c</fullName>
        <label>Evals - P1 - Clarity count</label>
        <summaryFilterItems>
            <field>Response_Evaluation__c.Presenter_1_Clarity__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_P1_Clarity_sum__c</fullName>
        <label>Evals - P1 - Clarity sum</label>
        <summarizedField>Response_Evaluation__c.SC_Presenter_1_Clarity__c</summarizedField>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_P1_Language_avg__c</fullName>
        <formula>Evals_P1_Language_sum__c / Evals_P1_Language_count__c / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evals - P1 - Language avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evals_P1_Language_count__c</fullName>
        <label>Evals - P1 - Language count</label>
        <summaryFilterItems>
            <field>Response_Evaluation__c.Presenter_1_Language__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_P1_Language_sum__c</fullName>
        <label>Evals - P1 - Language sum</label>
        <summarizedField>Response_Evaluation__c.SC_Presenter_1_Language__c</summarizedField>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>